# transom-checkpoint-engine

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENCE  MANIFEST.in  Makefile  README.md  build_wheel.sh  requirements.txt  setup.py
cmake/: findBrpc.cmake  findIbverbs.cmake  findMysql.cmake
dockerfile/centos/: Dockerfile  Dockerfile.build
dockerfile/rockylinux/: Dockerfile  Dockerfile.build
dockerfile/ubuntu/: Dockerfile  Dockerfile.build
docs/: background.md  benchmark.md  build.md  usage.md
hack/: 0server.sh  1server.sh  build.sh  run_demo.sh
transomSnapshot/cli/: cli.py
transomSnapshot/engine/: __init__.py  engine.py  transom_checkpoint_engine.py  transom_memcpy.py  util.py
transomSnapshot/tests/: engine_test.py  gpt2.py  maxIteration_test.py  mnist.py  oom_test.py
transomSnapshot/transom_memcpy/: Makefile  transom_memcpy.cpp
transom_snapshot_server/include/api/: api.h
transom_snapshot_server/include/buffer/: buffer.h
transom_snapshot_server/include/communicator/: communicator.h  endpoint.h  rdma_communicator.h
transom_snapshot_server/include/communicator/http/: http.proto  http_communicator.h  http_service_impl.h  remote_file_loader.h
transom_snapshot_server/include/config/: config.h  iteration_manager.h  world.h
transom_snapshot_server/include/coordinator/: client.h  coordinator.h  server.h
transom_snapshot_server/include/logger/: logger.h
transom_snapshot_server/include/monitor/: monitor.h
transom_snapshot_server/include/operator/: operator.h  rate_limiter.h
transom_snapshot_server/include/storage/: metadata.h  persistence.h  storage.h
transom_snapshot_server/include/util/: channel.h  dequeue.h  nic_helper.h  util.h
transom_snapshot_server/src/api/: api.cpp
transom_snapshot_server/src/backend/: main.cpp
transom_snapshot_server/src/communicator/: http_communicator.cpp  rdma_communicator.cpp
transom_snapshot_server/src/coordinator/: client.cpp  coordinator.cpp  server.cpp
transom_snapshot_server/src/logger/: logger.cpp
transom_snapshot_server/src/monitor/: monitor.cpp
transom_snapshot_server/src/operator/: operator.cpp  rate_limiter.cpp
transom_snapshot_server/src/storage/: metadata.cpp  persistence.cpp  storage.cpp
transom_snapshot_server/src/util/: nic_helper.cpp  util.cpp
transom_snapshot_server/tests/: coordinator_test.cpp  metaclient_test.cpp  operator_test.cpp
